# PoseWave

./: .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
examples/: basic_usage.py  realtime_detection.py
posewave/: __init__.py
posewave/api/: __init__.py  main.py  routes.py  websocket.py
posewave/core/: __init__.py  csi_processor.py  pose_detector.py  signal_filter.py
posewave/models/: __init__.py  feature_extractor.py  wavepose_net.py
posewave/utils/: __init__.py  config.py  logger.py  validators.py
tests/: test_all.py
